--- a/index.html
+++ b/index.html
@@ -47,59 +47,69 @@
         <div class="email">edet.nkereuwem@yahoo.com</div>
         <div class="icons">
           <!-- <a href="#"><i clas="bi bi-github ms-3"></i></a> -->
-          <a href="#"><i class="bi bi-linkedin"></i></a>
-          <a href="#"><i class="bi bi-github ms-3"></i></a>
+          <a href="https://www.linkedin.com/in/edet-nkereuwem-087280219/"><i class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/nkereuwem/Portfolio"><i class="bi bi-github ms-3"></i></a>
           <!-- <a href="#"><i class="bi bi-linkedin"></i></a> -->
         </div>
       </div>
-      <div id="project">
-        <h2><span class="font-primary">P</span>roject<h2>
-          <div class="card mb-3">
+</div>
+    </div>
+  </div>
+   <div id="project">
+        <h2><span class="font-primary">P</span>rojects</h2>
+        <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                <img src="img/project-netflix.png" alt="Netflix Clone">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Netflix Clone</h5>
-                  <p class="card-text"> This is a Netflix based project using HTML/ CSS / JS</p>
-                  <p class="card-text"><small class="text-muted">
-                    Test Login Account <br>
-                    Email: edet.nkereuwem@yahoo.com
-                    password : 1234
-                  </small>
-                  <a href="#" target="_blank" class=" btn btn-secondary">website link</a>
-                  <a href="#" target="_blank" class="btn btn-secondary">Githublink</a>                                              </a>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-
-          <div class="card mb-3">
-            <div class="row">
-              <div class="col-md-4">
-                <img src="img/project-twitter.png" alt="Twitter Project">
+                <img src="img/project-twitter.png" alt="Twitter Clone">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Twitter Clone</h5>
-                  <p class="card-text">This is a twitter based project</p>
+                  <p class="card-text">This is a twitter based twitter Clone project.</p>
                   <p class="card-text"><small class="text-muted">
-                    Test Login Account <br>
-                    Email: edet.nkereuwem@yahoo.com
-                    password : 1234
-                  </small>
-                  <a href="#" target="_blank" class=" btn btn-secondary">website link</a>
-                  <a href="#" target="_blank" class="btn btn-secondary">Githublink</a>                                              </a>
+                      test Login Account <br>
+                      Email : test@gmail.com<br>
+                      password : 1234
+                  </small></p>
+                  <a href="https://edetsportfolio.herokuapp.com/#project" target="_blank" class="btn btn-secondary">Website Link</a>
+                  <a href="https://github.com/nkereuwem/Portfolio" target="_blank" class="btn btn-secondary">Github Link</a>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
             </div>
           </div>
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js%22 " integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img
+                  src="img/project-netflix.png"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Netflix Clone</h5>
+                  <p class="card-text">
+                    This is a Netflix based project About, Login and
+                    Recommendation.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">Test login account <br />
+                      Email : User@email.com <br />
+                      Password : 123456</small>
+                  </p>
+                  <a href="https://edetsportfolio.herokuapp.com/#project" target="_blank" class="btn btn-secondary"
+                    >Website Link</a
+                  >
+                  <a href="https://github.com/nkereuwem/Portfolio" target="_blank" class="btn btn-secondary"
+                    >Github Link</a
+                  >
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js%22 " integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   </body>
 </html>
